refresh source code

--- a/OpenAuth.Mvc/Views/Login/Index.cshtml
+++ b/OpenAuth.Mvc/Views/Login/Index.cshtml
@@ -75,6 +75,14 @@
                                                     <button type="reset" class="layui-btn layui-btn-primary">重置</button>
                                                 </div>
                                             </div>
+
+                                            <div class="layui-form-item">
+                                                <div class="layui-input-block">
+                                                    @*<a href="~/UserManager/UserRegister?act=register">注册新用户</a>*@
+                                                    <a href="~/Login/Login4Registration">注册新用户</a>
+                                                    
+                                                </div>
+                                            </div>
                                         </form>
 
                                         <script src="~/Content/scripts/jquery/jQuery-2.1.4.min.js"></script>
