客户注册保存，未测试

--- a/OpenAuth.Mvc/Views/Login/Index.cshtml
+++ b/OpenAuth.Mvc/Views/Login/Index.cshtml
@@ -27,22 +27,23 @@
     <div class="main-container">
         <div class="main-content">
             <div class="row">
-                <div class="col-sm-10 col-sm-offset-1">
+                <div class="col-md-10 col-sm-offset-1">
                     <div class="login-container">
                         <div class="space-6"></div>
                         <div class="space-6"></div>
                         <div class="center layui-form-item">
-                            <h1>
-                                <i class="ace-icon fa fa-users blue"></i>
-                                <span class="red bigger-150">文档管理系统</span>
-                                <span class="white" id="id-text2"></span>
-                            </h1>
-                        </div>
+                                @*<i class="ace-icon fa fa-users blue"></i>*@
+                                <img class="col-md-2 right" src="~/Content/Images/login/logo.png"/>
+                            <div class="col-md-10">
+                                <div class="white bigger-140 left row">深圳达库文档案存储服务有限公司</div>
+                                <div class="white smaller-40 left row">SHENZHENG Document Storage Service International Inc.</div>
 
-                        <div class="space-6"></div>
+                            </div>
+
+                        <div class="layui-form-item"></div>
                         <div class="space-6"></div>
 
-                        <div class="position-relative">
+                        <div class="layui-form-item">
                             <div id="login-box" class="login-box visible widget-box no-border">
                                 <div class="widget-body">
                                     <div class="widget-main">
