--- a/OpenAuth.Mvc/Views/Login/UserRegister.cshtml
+++ b/OpenAuth.Mvc/Views/Login/UserRegister.cshtml
@@ -66,6 +66,12 @@
                                                     </div>
                                                 </div>
                                                 <div class="layui-form-item">
+                                                    <label class="col-sm-3 control-label no-padding-right" for=""> 确认密码 </label>
+                                                    <div class="col-sm-9">
+                                                        <input type="password" id="Password2" />
+                                                    </div>
+                                                </div>
+                                                <div class="layui-form-item">
                                                     <label class="col-sm-3 control-label no-padding-right" for=""> 单位名称 </label>
                                                     <div class="col-sm-9">
                                                         <input type="text" id="Customer_Name" v-model="Customer_Name" />
@@ -116,4 +122,5 @@
 </body>
 </html>
 
+<script src="~/Content/scripts/business/public.js"></script>
 <script src="~/BllScripts/Business/user_register.js"></script>
