--- a/OpenAuth.Mvc/Views/OrderManager/OrderApprove.cshtml
+++ b/OpenAuth.Mvc/Views/OrderManager/OrderApprove.cshtml
@@ -26,9 +26,11 @@
                             <form class="form-inline">
                                 <div class="form-group">
                                     <label>&nbsp;订单日期:从</label>
-                                    <input type="date" class="form-control" id="qryDateFrom" maxlength="30" placeholder="请输入" />
+                                    @*<input type="date" class="form-control" id="qryDateFrom" maxlength="30" placeholder="请输入" />*@
+                                    <input id="qryDateFrom" style="width:120px;" class="layui-input" placeholder="请输入" onclick="layui.laydate({elem: this, istime: true, format: 'YYYY-MM-DD'})">
                                     <label>到</label>
-                                    <input type="date" class="form-control" id="qryDateTo" maxlength="30" placeholder="请输入" />
+                                    @*<input type="date" class="form-control" id="qryDateTo" maxlength="30" placeholder="请输入" />*@
+                                    <input id="qryDateTo" style="width:120px;" class="layui-input" placeholder="请输入" onclick="layui.laydate({elem: this, istime: true, format: 'YYYY-MM-DD'})">
                                 </div>
 
                                 <div class="form-group">
@@ -67,6 +69,7 @@
 </div><!-- /.page-content -->
 <!--编辑对话框-->
 
+
 <script src="~/Content/scripts/zTree/js/jquery.ztree.excheck.js"></script>
 <script src="~/BllScripts/grid.js"></script>
 <script src="~/BllScripts/parentTreeMultiple.js"></script>
@@ -75,4 +78,9 @@
 <script src="~/Content/scripts/utils/ui.js"></script>
 <script src="~/Content/scripts/dist/js/bootstrap-select.js"></script>
 <link href="~/Content/scripts/dist/css/bootstrap-select.css" rel="stylesheet" />
-<script src="~/Content/scripts/plugins/datepicker/DatePicker.js"></script>
+@*<script src="~/Content/scripts/plugins/datepicker/DatePicker.js"></script>*@
+<script>
+    layui.use('laydate', function () {
+        var laydate = layui.laydate;
+    });
+</script>
