--- a/OpenAuth.Mvc/Views/OrderManager/MyOrders.cshtml
+++ b/OpenAuth.Mvc/Views/OrderManager/MyOrders.cshtml
@@ -81,3 +81,12 @@
         var laydate = layui.laydate;
     });
 </script>
+<style>
+    .ui-jqgrid tr.jqgrow td {
+        white-space: normal !important;
+        height: auto;
+        vertical-align: text-top;
+        padding-top: 2px;
+        word-break: break-all;
+    }
+</style>
