--- a/OpenAuth.Mvc/Views/OrderCatch/OrderCatch.cshtml
+++ b/OpenAuth.Mvc/Views/OrderCatch/OrderCatch.cshtml
@@ -9,7 +9,7 @@
         <ul class="breadcrumb">
             <li>
                 <i class="ace-icon fa fa-home home-icon"></i>
-                <a href="#">订单管理</a>
+                <a href="#">订单录入</a>
             </li>
             <li class="active">列表</li>
         </ul><!-- /.breadcrumb -->
